Fix contrast error: move text off-screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,8 +445,8 @@ main > div {
     left: 0;
     right: 0;
     bottom: 0;
-    color: transparent;
-    user-select: none;
+    text-indent: -9999px;
+    white-space: nowrap;
     background-color: var(--primary-background);
     -webkit-transition: var(--transition-normal);
     transition: var(--transition-normal);
